<resources>
    <string name="app_name">Pocket Karaoke</string>
    <string name="title_karaoke">Karaoke</string>
    <string name="title_effects">Effects</string>
    <string name="title_challenges">Challenges</string>
    <string name="forgot_password_message">We just need your registered email address to send you password reset instructions</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="reset">Reset</string>
    <string name="list_album_image">List album image</string>
    <string name="lyrics_container">Lyrics Container</string>
    <string name="karaoke_waveform_container">Karaoke Waveform Container</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="timer_container">Timer Container</string>
    <string name="previous">previous</string>
    <string name="record">Record</string>
    <string name="next">next</string>
    <string name="add_effects">Add Effects</string>
    <string name="play">Play</string>
    <string name="textview">TextView</string>
    <string name="change_playback_time">Change playback time</string>
    <string name="end">End</string>
    <string name="add_reverb">Add Reverb</string>
    <string name="play_2">Play 2</string>
    <string name="play_3">Play 3</string>
    <string name="change_pitch">Change Pitch</string>
    <string name="play_1">Play 1</string>
    <string name="play_original">Play Original</string>
    <string name="play_modified">Play Modified</string>
    <string name="save_modified">Save Modified</string>
    <string name="playback_time_slider">Playback Time Slider</string>
    <string name="playback_time">Playback Time</string>
    <string name="history">History</string>
    <string name="send">Send</string>
    <string name="received">Received</string>
    <string-array name="playbackTimeSliderValues">
        <item>0.0</item>
        <item>100.0</item>
    </string-array>
</resources>