<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_effects"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.effects.EffectsActivity">

    <TextView
        android:id="@+id/textView"
        android:text="@string/textview"
        android:layout_height="40dp"
        android:padding="10dp"
        android:gravity="center"
        android:layout_below="@+id/btnPlayOriginal"
        android:layout_width="match_parent" />

    <Button
        android:id="@+id/btnPlayOriginal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/play_original"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btnPitch"
        android:text="@string/change_pitch"
        android:textColor="#fff"
        android:layout_width="150dp"
        android:layout_below="@+id/btnPlayOriginal"
        android:layout_marginTop="50dp"
        android:layout_alignStart="@+id/btnPlayOriginal"
        android:layout_height="80dp" />

    <Button
        android:id="@+id/btnPlay1"
        android:text="@string/play_1"
        android:textColor="#fff"
        android:layout_width="150dp"
        android:layout_alignEnd="@+id/btnPlayOriginal"
        android:layout_alignTop="@+id/btnPitch"
        android:layout_height="80dp" />

    <Button
        android:id="@+id/btnReverb"
        android:text="@string/add_reverb"
        android:textColor="#fff"
        android:layout_width="150dp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/btnPitch"
        android:layout_alignStart="@+id/btnPitch"
        android:layout_height="80dp" />

    <Button
        android:id="@+id/btnPlay2"
        android:text="@string/play_2"
        android:textColor="#fff"
        android:layout_width="150dp"
        android:layout_alignTop="@+id/btnReverb"
        android:layout_alignEnd="@+id/btnPlay1"
        android:layout_height="80sp" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/playbackTimeSlider"
        android:contentDescription="@string/playback_time_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="0.0"
        android:valueTo="100.0"
        android:layout_below="@+id/btnReverb"
        android:layout_alignStart="@+id/btnReverb"
        android:layout_alignEnd="@+id/btnPlay2"
        android:layout_marginTop="30dp"
        app:values="@array/playbackTimeSliderValues" />

    <TextView
        android:id="@+id/textView2"
        android:text="@string/playback_time"
        android:layout_height="20dp"
        android:gravity="center"
        android:layout_below="@+id/playbackTimeSlider"
        android:layout_width="match_parent" />

    <Button
        android:id="@+id/btnPlayback"
        android:text="@string/change_playback_time"
        android:textColor="#fff"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_alignStart="@+id/btnReverb"
        android:layout_below="@+id/playbackTimeSlider"
        android:layout_marginTop="25dp" />

    <Button
        android:id="@+id/btnPlay3"
        android:text="@string/play_3"
        android:textColor="#fff"
        android:layout_width="150dp"
        android:layout_alignBottom="@+id/btnPlayback"
        android:layout_alignEnd="@+id/btnPlay2"
        android:layout_height="80dp" />

    <Button
        android:id="@+id/btnPlayModified"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btnSaveModified"
        android:text="@string/play_modified"
        android:textColor="#fff"
        android:layout_marginBottom="25dp"/>

    <Button
        android:id="@+id/btnSaveModified"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="@string/save_modified"
        android:layout_marginBottom="55dp"
        android:textColor="#fff" />

</RelativeLayout>