<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/activity_karaoke"
    android:background="#000"
    tools:context=".ui.karaoke.KaraokeActivity">


    <ImageView
        android:id="@+id/karaokeWaveformContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.45"
        android:adjustViewBounds="true"
        android:background="#FFF"
        android:contentDescription="@string/karaoke_waveform_container" />
    <TextView
        android:id="@+id/timerContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/_00_00_00"
        android:gravity="center"
        android:textSize="50sp"
        android:layout_weight="0.1"
        android:contentDescription="@string/timer_container"/>

    <ImageView
        android:id="@+id/lyricsContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.45"
        android:adjustViewBounds="true"
        android:background="#000"
        android:contentDescription="@string/lyrics_container" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/karaokeButton"
        android:text="@string/start" />
</LinearLayout>