<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.effects.EffectsFragment"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <Button
        android:text="@string/previous"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:id="@+id/btnLeft"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/textview"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:padding="10dp"
        android:layout_width="150dp"
        android:layout_alignBaseline="@+id/btnLeft"
        android:layout_alignBottom="@+id/btnLeft"
        android:layout_toStartOf="@+id/btnRight" />

    <Button
        android:text="@string/next"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnRight"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/add_effects"
        android:textColor="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnEffects"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="100dp" />

    <Button
        android:text="@string/play"
        android:textColor="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnPlay"
        android:layout_marginBottom="60dp"
        android:layout_above="@+id/btnEffects"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/record"
        android:textColor="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnRecord"
        android:layout_marginBottom="60dp"
        android:layout_above="@+id/btnPlay"
        android:layout_alignParentStart="true" />

</RelativeLayout>
