<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_karaoke">

    <fragment
        android:id="@+id/navigation_karaoke"
        android:name="me.fusan.pocketkaraoke.ui.karaoke.KaraokeFragment"
        android:label="@string/title_karaoke"
        tools:layout="@layout/fragment_karaoke" />

    <fragment
        android:id="@+id/navigation_effects"
        android:name="me.fusan.pocketkaraoke.ui.effects.EffectsFragment"
        android:label="@string/title_effects"
        tools:layout="@layout/fragment_effects" />

    <fragment
        android:id="@+id/navigation_challenges"
        android:name="me.fusan.pocketkaraoke.ui.challenges.ChallengesFragment"
        android:label="@string/title_challenges"
        tools:layout="@layout/fragment_challenges" />
</navigation>